# serializer version: 1
# name: test_snapshot_config_variants[alphabetical_sort-alpha-None][alphabetical_sort]
  '''
  [1;34m_main[0m                   [32m+475[0m [31m-68[0m[32m████████████████████[0m[31m████████████████████[0m [36m100.0%[0m
  [2m├── [0mREADME.md            [32m+20[0m [31m-3[0m [32m                   ▉[0m[31m▉                   [0m [36m  4.2%[0m
  [2m├── [0mdocs/api.md          [32m+25[0m    [32m                   █[0m[31m                    [0m [36m  4.6%[0m
  [2m├── [0m[1;34msrc[0m                 [32m+320[0m [31m-58[0m[32m      ▐█████████████[0m[31m█████████████████   [0m [36m 69.6%[0m
  [2m│   [0m[2m├── [0mapi/routes.py    [32m+60[0m [31m-8[0m [32m                 ▐██[0m[31m██▎                 [0m [36m 12.5%[0m
  [2m│   [0m[2m├── [0mmain.py          [32m+50[0m [31m-10[0m[32m                  ██[0m[31m██▉                 [0m [36m 11.0%[0m
  [2m│   [0m[2m├── [0m[1;34mmodels[0m          [32m+180[0m [31m-35[0m[32m            ▐███████[0m[31m██████████▎         [0m [36m 39.6%[0m
  [2m│   [0m[2m│   [0m[2m├── [0mpost.py      [32m+80[0m [31m-15[0m[32m                ▕███[0m[31m████▍               [0m [36m 17.5%[0m
  [2m│   [0m[2m│   [0m[2m└── [0muser.py     [32m+100[0m [31m-20[0m[32m               ▕████[0m[31m█████▉              [0m [36m 22.1%[0m
  [2m│   [0m[2m└── [0mutils.py         [32m+30[0m [31m-5[0m [32m                  ▕█[0m[31m█▍                  [0m [36m  6.4%[0m
  [2m└── [0m[1;34mtests[0m               [32m+110[0m [31m-7[0m [32m               ▐████[0m[31m██                  [0m [36m 21.5%[0m
  [2m    [0m[2m├── [0mtest_main.py     [32m+40[0m [31m-2[0m [32m                  ▐█[0m[31m▌                   [0m [36m  7.7%[0m
  [2m    [0m[2m└── [0mtest_models.py   [32m+70[0m [31m-5[0m [32m                 ███[0m[31m█▍                  [0m [36m 13.8%[0m
  
  '''
# ---
# name: test_snapshot_config_variants[custom_bar_width-size-config6][custom_bar_width]
  '''
  [1;34m_main[0m                   [32m+475[0m [31m-68[0m[32m██████████████████████████████[0m[31m██████████████████████████████[0m [36m100.0%[0m
  [2m├── [0m[1;34msrc[0m                 [32m+320[0m [31m-58[0m[32m         ▕████████████████████[0m[31m█████████████████████████▌    [0m [36m 69.6%[0m
  [2m│   [0m[2m├── [0m[1;34mmodels[0m          [32m+180[0m [31m-35[0m[32m                  ▕███████████[0m[31m███████████████▍              [0m [36m 39.6%[0m
  [2m│   [0m[2m│   [0m[2m├── [0muser.py     [32m+100[0m [31m-20[0m[32m                       ▕██████[0m[31m████████▊                     [0m [36m 22.1%[0m
  [2m│   [0m[2m│   [0m[2m└── [0mpost.py      [32m+80[0m [31m-15[0m[32m                         █████[0m[31m██████▌                       [0m [36m 17.5%[0m
  [2m│   [0m[2m├── [0mapi/routes.py    [32m+60[0m [31m-8[0m [32m                          ▉███[0m[31m███▌                          [0m [36m 12.5%[0m
  [2m│   [0m[2m├── [0mmain.py          [32m+50[0m [31m-10[0m[32m                          ▕███[0m[31m████▍                         [0m [36m 11.0%[0m
  [2m│   [0m[2m└── [0mutils.py         [32m+30[0m [31m-5[0m [32m                            ██[0m[31m██▏                           [0m [36m  6.4%[0m
  [2m├── [0m[1;34mtests[0m               [32m+110[0m [31m-7[0m [32m                       ███████[0m[31m███                           [0m [36m 21.5%[0m
  [2m│   [0m[2m├── [0mtest_models.py   [32m+70[0m [31m-5[0m [32m                         ▐████[0m[31m██▏                           [0m [36m 13.8%[0m
  [2m│   [0m[2m└── [0mtest_main.py     [32m+40[0m [31m-2[0m [32m                           ▐██[0m[31m▉                             [0m [36m  7.7%[0m
  [2m├── [0mdocs/api.md          [32m+25[0m    [32m                            ▐█[0m[31m                              [0m [36m  4.6%[0m
  [2m└── [0mREADME.md            [32m+20[0m [31m-3[0m [32m                            ▕█[0m[31m█▎                            [0m [36m  4.2%[0m
  
  '''
# ---
# name: test_snapshot_config_variants[default_rendering-size-None][default_rendering]
  '''
  [1;34m_main[0m                   [32m+475[0m [31m-68[0m[32m████████████████████[0m[31m████████████████████[0m [36m100.0%[0m
  [2m├── [0m[1;34msrc[0m                 [32m+320[0m [31m-58[0m[32m      ▐█████████████[0m[31m█████████████████   [0m [36m 69.6%[0m
  [2m│   [0m[2m├── [0m[1;34mmodels[0m          [32m+180[0m [31m-35[0m[32m            ▐███████[0m[31m██████████▎         [0m [36m 39.6%[0m
  [2m│   [0m[2m│   [0m[2m├── [0muser.py     [32m+100[0m [31m-20[0m[32m               ▕████[0m[31m█████▉              [0m [36m 22.1%[0m
  [2m│   [0m[2m│   [0m[2m└── [0mpost.py      [32m+80[0m [31m-15[0m[32m                ▕███[0m[31m████▍               [0m [36m 17.5%[0m
  [2m│   [0m[2m├── [0mapi/routes.py    [32m+60[0m [31m-8[0m [32m                 ▐██[0m[31m██▎                 [0m [36m 12.5%[0m
  [2m│   [0m[2m├── [0mmain.py          [32m+50[0m [31m-10[0m[32m                  ██[0m[31m██▉                 [0m [36m 11.0%[0m
  [2m│   [0m[2m└── [0mutils.py         [32m+30[0m [31m-5[0m [32m                  ▕█[0m[31m█▍                  [0m [36m  6.4%[0m
  [2m├── [0m[1;34mtests[0m               [32m+110[0m [31m-7[0m [32m               ▐████[0m[31m██                  [0m [36m 21.5%[0m
  [2m│   [0m[2m├── [0mtest_models.py   [32m+70[0m [31m-5[0m [32m                 ███[0m[31m█▍                  [0m [36m 13.8%[0m
  [2m│   [0m[2m└── [0mtest_main.py     [32m+40[0m [31m-2[0m [32m                  ▐█[0m[31m▌                   [0m [36m  7.7%[0m
  [2m├── [0mdocs/api.md          [32m+25[0m    [32m                   █[0m[31m                    [0m [36m  4.6%[0m
  [2m└── [0mREADME.md            [32m+20[0m [31m-3[0m [32m                   ▉[0m[31m▉                   [0m [36m  4.2%[0m
  
  '''
# ---
# name: test_snapshot_config_variants[minimal-size-config5][minimal]
  '''
  [1;34m_main[0m                  
  [2m├── [0m[1;34msrc[0m                
  [2m│   [0m[2m├── [0m[1;34mmodels[0m         
  [2m│   [0m[2m│   [0m[2m├── [0muser.py    
  [2m│   [0m[2m│   [0m[2m└── [0mpost.py    
  [2m│   [0m[2m├── [0mapi/routes.py  
  [2m│   [0m[2m├── [0mmain.py        
  [2m│   [0m[2m└── [0mutils.py       
  [2m├── [0m[1;34mtests[0m              
  [2m│   [0m[2m├── [0mtest_models.py 
  [2m│   [0m[2m└── [0mtest_main.py   
  [2m├── [0mdocs/api.md        
  [2m└── [0mREADME.md          
  
  '''
# ---
# name: test_snapshot_config_variants[no_bars-size-config2][no_bars]
  '''
  [1;34m_main[0m                   [32m+475[0m [31m-68[0m [36m100.0%[0m
  [2m├── [0m[1;34msrc[0m                 [32m+320[0m [31m-58[0m [36m 69.6%[0m
  [2m│   [0m[2m├── [0m[1;34mmodels[0m          [32m+180[0m [31m-35[0m [36m 39.6%[0m
  [2m│   [0m[2m│   [0m[2m├── [0muser.py     [32m+100[0m [31m-20[0m [36m 22.1%[0m
  [2m│   [0m[2m│   [0m[2m└── [0mpost.py      [32m+80[0m [31m-15[0m [36m 17.5%[0m
  [2m│   [0m[2m├── [0mapi/routes.py    [32m+60[0m [31m-8[0m  [36m 12.5%[0m
  [2m│   [0m[2m├── [0mmain.py          [32m+50[0m [31m-10[0m [36m 11.0%[0m
  [2m│   [0m[2m└── [0mutils.py         [32m+30[0m [31m-5[0m  [36m  6.4%[0m
  [2m├── [0m[1;34mtests[0m               [32m+110[0m [31m-7[0m  [36m 21.5%[0m
  [2m│   [0m[2m├── [0mtest_models.py   [32m+70[0m [31m-5[0m  [36m 13.8%[0m
  [2m│   [0m[2m└── [0mtest_main.py     [32m+40[0m [31m-2[0m  [36m  7.7%[0m
  [2m├── [0mdocs/api.md          [32m+25[0m     [36m  4.6%[0m
  [2m└── [0mREADME.md            [32m+20[0m [31m-3[0m  [36m  4.2%[0m
  
  '''
# ---
# name: test_snapshot_config_variants[no_counts-size-config3][no_counts]
  '''
  [1;34m_main[0m                  [32m████████████████████[0m[31m████████████████████[0m [36m100.0%[0m
  [2m├── [0m[1;34msrc[0m                [32m      ▐█████████████[0m[31m█████████████████   [0m [36m 69.6%[0m
  [2m│   [0m[2m├── [0m[1;34mmodels[0m         [32m            ▐███████[0m[31m██████████▎         [0m [36m 39.6%[0m
  [2m│   [0m[2m│   [0m[2m├── [0muser.py    [32m               ▕████[0m[31m█████▉              [0m [36m 22.1%[0m
  [2m│   [0m[2m│   [0m[2m└── [0mpost.py    [32m                ▕███[0m[31m████▍               [0m [36m 17.5%[0m
  [2m│   [0m[2m├── [0mapi/routes.py  [32m                 ▐██[0m[31m██▎                 [0m [36m 12.5%[0m
  [2m│   [0m[2m├── [0mmain.py        [32m                  ██[0m[31m██▉                 [0m [36m 11.0%[0m
  [2m│   [0m[2m└── [0mutils.py       [32m                  ▕█[0m[31m█▍                  [0m [36m  6.4%[0m
  [2m├── [0m[1;34mtests[0m              [32m               ▐████[0m[31m██                  [0m [36m 21.5%[0m
  [2m│   [0m[2m├── [0mtest_models.py [32m                 ███[0m[31m█▍                  [0m [36m 13.8%[0m
  [2m│   [0m[2m└── [0mtest_main.py   [32m                  ▐█[0m[31m▌                   [0m [36m  7.7%[0m
  [2m├── [0mdocs/api.md        [32m                   █[0m[31m                    [0m [36m  4.6%[0m
  [2m└── [0mREADME.md          [32m                   ▉[0m[31m▉                   [0m [36m  4.2%[0m
  
  '''
# ---
# name: test_snapshot_config_variants[no_percentages-size-config4][no_percentages]
  '''
  [1;34m_main[0m                   [32m+475[0m [31m-68[0m[32m████████████████████[0m[31m████████████████████[0m
  [2m├── [0m[1;34msrc[0m                 [32m+320[0m [31m-58[0m[32m      ▐█████████████[0m[31m█████████████████   [0m
  [2m│   [0m[2m├── [0m[1;34mmodels[0m          [32m+180[0m [31m-35[0m[32m            ▐███████[0m[31m██████████▎         [0m
  [2m│   [0m[2m│   [0m[2m├── [0muser.py     [32m+100[0m [31m-20[0m[32m               ▕████[0m[31m█████▉              [0m
  [2m│   [0m[2m│   [0m[2m└── [0mpost.py      [32m+80[0m [31m-15[0m[32m                ▕███[0m[31m████▍               [0m
  [2m│   [0m[2m├── [0mapi/routes.py    [32m+60[0m [31m-8[0m [32m                 ▐██[0m[31m██▎                 [0m
  [2m│   [0m[2m├── [0mmain.py          [32m+50[0m [31m-10[0m[32m                  ██[0m[31m██▉                 [0m
  [2m│   [0m[2m└── [0mutils.py         [32m+30[0m [31m-5[0m [32m                  ▕█[0m[31m█▍                  [0m
  [2m├── [0m[1;34mtests[0m               [32m+110[0m [31m-7[0m [32m               ▐████[0m[31m██                  [0m
  [2m│   [0m[2m├── [0mtest_models.py   [32m+70[0m [31m-5[0m [32m                 ███[0m[31m█▍                  [0m
  [2m│   [0m[2m└── [0mtest_main.py     [32m+40[0m [31m-2[0m [32m                  ▐█[0m[31m▌                   [0m
  [2m├── [0mdocs/api.md          [32m+25[0m    [32m                   █[0m[31m                    [0m
  [2m└── [0mREADME.md            [32m+20[0m [31m-3[0m [32m                   ▉[0m[31m▉                   [0m
  
  '''
# ---
# name: test_snapshot_scenarios[binary_file-changes4][binary_file]
  '''
  [1;34m_main[0m                   [32m+15[0m [31m-3[0m[32m████████████████████[0m[31m████████████████████[0m [36m100.0%[0m
  [2m├── [0msrc/code.py         [32m+10[0m [31m-2[0m[32m      ▕█████████████[0m[31m█████████████▎      [0m [36m 66.7%[0m
  [2m├── [0mREADME.md            [32m+5[0m [31m-1[0m[32m             ▐██████[0m[31m██████▋             [0m [36m 33.3%[0m
  [2m└── [0m[1;34massets[0m                    [32m                    [0m[31m                    [0m [36m  0.0%[0m
  [2m    [0m[2m├── [0mimage.png  [2m[Binary][0m   [32m                    [0m[31m                    [0m       
  [2m    [0m[2m└── [0mdata.bin   [2m[Binary][0m   [32m                    [0m[31m                    [0m       
  
  '''
# ---
# name: test_snapshot_scenarios[deep_nesting-changes1][deep_nesting]
  '''
  [1;34m_main/a/b[0m            [32m+45[0m [31m-10[0m[32m████████████████████[0m[31m████████████████████[0m [36m100.0%[0m
  [2m├── [0m[1;34mc[0m                [32m+35[0m [31m-8[0m [32m    ▐███████████████[0m[31m████████████████    [0m [36m 78.2%[0m
  [2m│   [0m[2m├── [0md/e/file.py  [32m+20[0m [31m-5[0m [32m           █████████[0m[31m██████████          [0m [36m 45.5%[0m
  [2m│   [0m[2m└── [0mx/y/file.py  [32m+15[0m [31m-3[0m [32m             ▐██████[0m[31m██████              [0m [36m 32.7%[0m
  [2m└── [0mfile.py          [32m+10[0m [31m-2[0m [32m               ▐████[0m[31m████                [0m [36m 21.8%[0m
  
  '''
# ---
# name: test_snapshot_scenarios[only_additions-changes2][only_additions]
  '''
  [1;34m_main[0m                 [32m+100[0m [32m████████████████████[0m[31m                    [0m [36m100.0%[0m
  [2m├── [0mnew_file1.py       [32m+50[0m [32m          ██████████[0m[31m                    [0m [36m 50.0%[0m
  [2m├── [0mnew_file2.py       [32m+30[0m [32m              ██████[0m[31m                    [0m [36m 30.0%[0m
  [2m└── [0mdir/new_file3.py   [32m+20[0m [32m                ████[0m[31m                    [0m [36m 20.0%[0m
  
  '''
# ---
# name: test_snapshot_scenarios[only_deletions-changes3][only_deletions]
  '''
  [1;34m_main[0m                  [31m-100[0m[32m                    [0m[31m████████████████████[0m [36m100.0%[0m
  [2m├── [0mold_file1.py       [31m-50[0m [32m                    [0m[31m██████████          [0m [36m 50.0%[0m
  [2m├── [0mold_file2.py       [31m-30[0m [32m                    [0m[31m██████              [0m [36m 30.0%[0m
  [2m└── [0mdir/old_file3.py   [31m-20[0m [32m                    [0m[31m████                [0m [36m 20.0%[0m
  
  '''
# ---
# name: test_snapshot_scenarios[small_tree-changes0][small_tree]
  '''
  [1;34m_main[0m         [32m+15[0m [31m-3[0m[32m████████████████████[0m[31m████████████████████[0m [36m100.0%[0m
  [2m├── [0mmain.py   [32m+10[0m [31m-2[0m[32m      ▕█████████████[0m[31m█████████████▎      [0m [36m 66.7%[0m
  [2m└── [0mutils.py   [32m+5[0m [31m-1[0m[32m             ▐██████[0m[31m██████▋             [0m [36m 33.3%[0m
  
  '''
# ---
